[gd_scene format=3 uid="uid://c1kgojv6jeo6v"]

[ext_resource type="Script" uid="uid://d723p2j1v35n" path="res://scripts/arcade.gd" id="1_wer3u"]
[ext_resource type="PackedScene" uid="uid://20m2g8gbaph4" path="res://scenes/move_joystick.tscn" id="2_8hgfh"]
[ext_resource type="PackedScene" uid="uid://b5rlwb30vwk06" path="res://scenes/attack_joystick.tscn" id="3_utn3h"]
[ext_resource type="FontFile" uid="uid://qngbm4eesuic" path="res://fonts/pixel_operator/PixelOperator.ttf" id="4_8hgfh"]
[ext_resource type="PackedScene" uid="uid://b3q0sna1xeess" path="res://scenes/map.tscn" id="4_cmngb"]
[ext_resource type="PackedScene" uid="uid://d3lcjptta5fa5" path="res://scenes/Elise.tscn" id="5_0ukt7"]
[ext_resource type="Texture2D" uid="uid://d13tkluu0igon" path="res://assets/ui/proguess_health.png" id="5_sktuj"]
[ext_resource type="Texture2D" uid="uid://dcyarhivi2wmt" path="res://assets/ui/bar_overlay.png" id="7_0ukt7"]
[ext_resource type="Texture2D" uid="uid://brutv3fv6pcrv" path="res://assets/ui/progress_soul.png" id="7_iwdyi"]
[ext_resource type="Texture2D" uid="uid://rqfhhjn737nm" path="res://assets/ui/pause_button.png" id="8_iwdyi"]
[ext_resource type="PackedScene" uid="uid://ctd20jgvr6v4g" path="res://scenes/gameover_arcade.tscn" id="8_sktuj"]
[ext_resource type="PackedScene" uid="uid://dujoptu1e5nhp" path="res://scenes/pause_menu.tscn" id="10_xwleh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2wjg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xwleh"]
texture = ExtResource("5_sktuj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fgq0x"]
texture = ExtResource("7_iwdyi")

[sub_resource type="AtlasTexture" id="AtlasTexture_sktuj"]
atlas = ExtResource("7_0ukt7")
region = Rect2(0, 0, 104, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2wjg"]
atlas = ExtResource("7_0ukt7")
region = Rect2(104, 0, 104, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwdyi"]
atlas = ExtResource("7_0ukt7")
region = Rect2(208, 0, 104, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwleh"]
atlas = ExtResource("7_0ukt7")
region = Rect2(312, 0, 104, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_n02mf"]
atlas = ExtResource("7_0ukt7")
region = Rect2(416, 0, 104, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgq0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sktuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2wjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwdyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwleh")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_n02mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwleh")
}],
"loop": true,
"name": &"tum_tum",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fgq0x"]
atlas = ExtResource("8_iwdyi")
region = Rect2(0, 0, 27, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l4im"]
atlas = ExtResource("8_iwdyi")
region = Rect2(0, 27, 27, 25)

[sub_resource type="Environment" id="Environment_iywne"]
background_mode = 3
glow_enabled = true
glow_intensity = 0.35
glow_bloom = 1.0
glow_hdr_threshold = 0.39
glow_hdr_scale = 0.0
glow_hdr_luminance_cap = 1.62

[node name="arcade" type="Node2D" unique_id=1847947803]
y_sort_enabled = true
script = ExtResource("1_wer3u")

[node name="hud" type="CanvasLayer" parent="." unique_id=156426674]

[node name="main hud" type="Panel" parent="hud" unique_id=1722965420]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_m2wjg")

[node name="Move Joystick" parent="hud/main hud" unique_id=1579684198 instance=ExtResource("2_8hgfh")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1

[node name="Attack Joystick" parent="hud/main hud" unique_id=1983368250 instance=ExtResource("3_utn3h")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="hud/main hud" unique_id=1103986741]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="wave_label" type="Label" parent="hud/main hud/MarginContainer" unique_id=1344655444]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_8hgfh")
theme_override_font_sizes/font_size = 48
text = "Onda:"
horizontal_alignment = 1

[node name="score_label" type="Label" parent="hud/main hud/MarginContainer" unique_id=943758105]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_8hgfh")
theme_override_font_sizes/font_size = 48
text = "Pontos: 0"
horizontal_alignment = 1

[node name="player_healthbar" type="ProgressBar" parent="hud/main hud" unique_id=1064724673]
unique_name_in_owner = true
layout_mode = 0
offset_left = 189.0
offset_top = 49.0
offset_right = 384.0
offset_bottom = 64.0
size_flags_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxTexture_xwleh")
max_value = 25.0
value = 25.0
show_percentage = false

[node name="soul_bar" type="ProgressBar" parent="hud/main hud" unique_id=6761468]
unique_name_in_owner = true
layout_mode = 0
offset_left = 186.0
offset_top = 72.0
offset_right = 312.0
offset_bottom = 88.0
size_flags_horizontal = 0
theme_override_styles/fill = SubResource("StyleBoxTexture_fgq0x")
value = 50.0
show_percentage = false

[node name="bar_overlay" type="AnimatedSprite2D" parent="hud/main hud" unique_id=1844038109]
position = Vector2(270, 64)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_fgq0x")
animation = &"tum_tum"
autoplay = "tum_tum"
frame_progress = 0.49147266

[node name="pause_button" type="TextureButton" parent="hud/main hud" unique_id=520850813]
layout_mode = 0
offset_left = 26.0
offset_top = 23.0
offset_right = 94.0
offset_bottom = 86.0
texture_normal = SubResource("AtlasTexture_fgq0x")
texture_pressed = SubResource("AtlasTexture_1l4im")
stretch_mode = 4

[node name="gameover_arcade" parent="hud" unique_id=977741309 instance=ExtResource("8_sktuj")]
process_mode = 3
visible = false

[node name="pause_menu" parent="hud" unique_id=267171536 instance=ExtResource("10_xwleh")]
process_mode = 3
visible = false

[node name="Map" parent="." unique_id=2040865469 instance=ExtResource("4_cmngb")]
z_as_relative = false
y_sort_enabled = false
position = Vector2(-174, -161)

[node name="Elise" parent="." unique_id=344316921 instance=ExtResource("5_0ukt7")]
unique_name_in_owner = true
y_sort_enabled = false
position = Vector2(548, 280)

[node name="Camera2D" type="Camera2D" parent="Elise" unique_id=1022741936]
zoom = Vector2(4, 4)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=807012125]
environment = SubResource("Environment_iywne")

[connection signal="pressed" from="hud/main hud/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="exit_pressed" from="hud/gameover_arcade" to="." method="_on_gameover_arcade_exit_pressed"]
[connection signal="continue_game" from="hud/pause_menu" to="." method="_on_pause_menu_continue_game"]
[connection signal="exit_game" from="hud/pause_menu" to="." method="_on_pause_menu_exit_game"]
[connection signal="player_died" from="Elise" to="." method="_on_elise_player_died"]
